fix: edit styling and scrollbar

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,7 +20,6 @@ body {
   font-weight: 400;
   font-style: normal;
   font-variation-settings: "ELSH" 0;
-  overflow-y: auto;
 }
 
 h1,
